--- a/4.1/index.html
+++ b/4.1/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/4.1/css/style.css">
-        <link rel="stylesheet" href="/4.1/css/adaptive.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/adaptive.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-        <link rel="shortcut icon" href="/images/triangle.png" type="image">
+        <link rel="shortcut icon" href="images/triangle.png" type="image">
         <title>My page</title>
     </head>
     <body> 
@@ -27,7 +27,7 @@
                     </blockquote>
                 </div>    
                 <div class="me_and_my_lists">
-                    <img class="me" src="/images/cat.jpg" alt="my_photo">
+                    <img class="me" src="images/cat.jpg" alt="my_photo">
                     <div class="list_of_animes">
                         <h3 class="animes">Любимые аниме:</h3>
                         <ol class="top_of_animes">
@@ -73,22 +73,22 @@
                 <div class="films_block">
                     <h2 class="favourite_films">Любимые фильмы</h2>
                         <div class="this_film">
-                            <img src="/images/lovely_bones.jpg" alt="lovely_bones" class="film">
+                            <img src="images/lovely_bones.jpg" alt="lovely_bones" class="film">
                             <h3 class="name_of_film">Милые кости</h3>
                             <p class="about_film">Фильм рассказывает о переживаниях четырнадцатилетней девушки, изнасилованной и убитой маньяком-соседом. Наблюдая за жизнью домочадцев с небес, героиня мечтает о простых подростковых радостях и жаждет поимки душегуба.</p>
                         </div>
                         <div class="this_film">
-                            <img src="/images/beetlejuice.jpg" alt="beetlejuice" class="film">
+                            <img src="images/beetlejuice.jpg" alt="beetlejuice" class="film">
                             <h3 class="name_of_film">Битлджус</h3>
                             <p class="about_film">Что сделает пара непрофессиональных привидений, когда их добрую Новую Англию наводнят снобы из Нью-Йорка? Они наймут частного «био-экзорциста», чтобы изгнать пришельцев. И результат превзойдет все ожидания!</p>
                         </div>
                         <div class="this_film">
-                            <img src="/images/metropolis.jpg" alt="picture" class="film">
+                            <img src="images/metropolis.jpg" alt="picture" class="film">
                             <h3 class="name_of_film">Метрополис</h3>
                             <p class="about_film">Метрополис — город будущего, разделен на две части. Под землей находятся жилища рабочих, над ними цеха с машинами. В верхнем городе расположены офисы, богатые кварталы и сады развлечений. Вся власть в городе принадлежит магнату Иогану Фендерсону. Его сын — Фредер догадывается о несправедливости, царящей в метрополисе. Спустившись в машинную зону, Фредер приходит в ужас: он видит страшного Молоха, пожирающего людей. Не в силах смириться с увиденным, он начинает борьбу со злом.</p>
                         </div>
                         <div class="this_film_last">
-                            <img src="/images/big_eyes.jpg" alt="picture" class="film">
+                            <img src="images/big_eyes.jpg" alt="picture" class="film">
                             <h3 class="name_of_film">Большие глаза</h3>
                             <p class="about_film">Фильм рассказывает об известной американской художнице Маргарет Кин, её феноменальном успехе в конце 1950-х годов и последующих взаимоотношениях с мужем, который выдавал себя за подлинного автора её работ.</p>
                         </div>
